latest resume added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="title">Hetu Patel</h1>
         <p class="section__text__p2">FullStack web Developer</p>
         <div class="btn-container">
-            <button class="btn btn-color-2" onclick="window.open('./assets/Hetu_Resume.pdf')">
+            <button class="btn btn-color-2" onclick="window.open('./assets/Hetu_Patel1.pdf')">
                 Download CV
             </button>
             <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -57,10 +57,16 @@
         <div id="socials-container">
             <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon"
                 onclick="location.href='https://www.linkedin.com/in/hetu-patel-61a8b1288/'" />
+
             <img src="./assets/github.png" alt="My Github profile" class="icon"
                 onclick="location.href='https://github.com/Patelhetu-177'" />
+
             <img src="./assets/leetcode.png" alt="My Leetcode profile" class="icon"
                 onclick="location.href='https://leetcode.com/u/Hetu_patel_17/'" />
+
+            <img src="./assets/codechef.jpg" alt="My CodeChef profile" class="icon"
+                onclick="location.href='https://www.codechef.com/users/hetu_cp17'" />
+
         </div>
     </div>
 </section>
@@ -156,7 +162,7 @@
 
 
 <br />
-<br/>
+<br />
 <!-- Experience section -->
 <section id="experience">
     <p class="section__text__p1">Explore My</p>
@@ -265,7 +271,7 @@
 
 
 <br />
-<br/>
+<br />
 <!-- Projects section -->
 <section id="projects">
     <p class="section__text__p1">Browse My Recent</p>
